plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'com.diffplug.spotless' version '6.22.0'
}

group = 'com.employeedashboard'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'  // database access via MyBatis
    implementation 'org.flywaydb:flyway-core'   // database migrations
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // documenting RestApis
    implementation 'org.springframework.boot:spring-boot-starter-validation' // validations
    implementation 'org.springframework.boot:spring-boot-starter-security' //auth
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
    runtimeOnly 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
}

tasks.named('test') {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(Map.of("Main-Class", "com.employeedashboard.oirs.Application"))
    }
}

spotless {
    java {
        importOrder()
        indentWithSpaces()
        removeUnusedImports()
        cleanthat()
        eclipse('4.13')
        formatAnnotations()
    }
}

compileJava.dependsOn 'spotlessApply'